--- a/src/components/TaskEditor.css
+++ b/src/components/TaskEditor.css
@@ -17,7 +17,7 @@
 
 .modal-content {
     position: relative;
-    width: 550px;
+    width: 600px;
     max-height: 600px;
     padding: 1rem;
     background-color: var(--clr-background);
